# rag-support-assistant

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml
api/: main.py
eval/: EXPERIMENTS.md  README.md  evaluate.py  metrics.py  results.json
frontend/: index.html  main.js  style.css
prompts/: classifier.txt  followup.txt  generator.txt  high_stakes.txt  query_rewriter.txt  seed.py  self_critique.txt
src/: classifier.py  config.py  generator.py  ingest.py  pipeline.py  prompts.py  query_rewriter.py  rate_limit.py  reranker.py  retriever.py
tests/: test_chunking.py  test_generator.py  test_metrics.py  test_pipeline.py
