[project]
name = "rag-support-assistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.2",
    "datasets>=4.6.1",
    "fastapi>=0.135.1",
    "langfuse>=3.14.5",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.67.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.2.3",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
